iptables.rules
# Generated by iptables-save v1.6.1 on Fri Oct 19 10:25:35 2018
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [8:616]
:POSTROUTING ACCEPT [8:616]
-A PREROUTING -p tcp -m tcp --dport 10001 -j DNAT --to-destination 192.168.27.5:22
-A PREROUTING -p tcp -m tcp --dport 10002 -j DNAT --to-destination 192.168.27.4:22
-A PREROUTING -p tcp -m tcp --dport 10003 -j DNAT --to-destination 192.168.27.75:22
-A PREROUTING -p tcp -m tcp --dport 10004 -j DNAT --to-destination 192.168.27.80:22
-A POSTROUTING -d 192.168.27.5/32 -p tcp -m tcp --dport 22 -j SNAT --to-source 192.168.27.73
-A POSTROUTING -d 192.168.27.4/32 -p tcp -m tcp --dport 22 -j SNAT --to-source 192.168.27.73
-A POSTROUTING -d 192.168.27.75/32 -p tcp -m tcp --dport 22 -j SNAT --to-source 192.168.27.73
-A POSTROUTING -d 192.168.27.80/32 -p tcp -m tcp --dport 22 -j SNAT --to-source 192.168.27.73
COMMIT
# Completed on Fri Oct 19 10:25:35 2018
# Generated by iptables-save v1.6.1 on Fri Oct 19 10:25:35 2018
*filter
:INPUT ACCEPT [922873:285290579]
:FORWARD ACCEPT [1943289:1674176826]
:OUTPUT ACCEPT [790236:170353613]
COMMIT
# Completed on Fri Oct 19 10:25:35 2018
